--- a/includes/footer.html
+++ b/includes/footer.html
@@ -34,15 +34,15 @@
                 <h3 class="footer-title">Contato</h3>
                 <div class="footer-contact">
                     <div class="contact-item">
-                        <i class="fab fa-whatsapp"></i>
+                        <i class="fab fa-whatsapp" style="color: white;"></i>
                         <span>(48) 9222-6800 (Somente WhatsApp)</span>
                     </div>
                     <div class="contact-item">
-                        <i class="fas fa-envelope"></i>
+                        <i class="fas fa-envelope" style="color: white;"></i>
                         <span>admccpsolucoes@gmail.com</span>
                     </div>
                     <div class="contact-item">
-                        <i class="fas fa-map-marker-alt"></i>
+                        <i class="fas fa-map-marker-alt" style="color: white;"></i>
                         <span>Rua Ilha dos Corais, 60 - Vargem do Bom Jesus<br>Florianópolis - SC</span>
                     </div>
                 </div>
